RESOLVED FIXED 122119
Pass VM instead of JSGlobalObject to MathObject constructor.
https://bugs.webkit.org/show_bug.cgi?id=122119
Summary Pass VM instead of JSGlobalObject to MathObject constructor.
Andreas Kling
Reported 2013-09-30 12:48:22 PDT
Pass VM instead of JSGlobalObject to MathObject constructor.
Attachments
Patch (13.81 KB, patch)
2013-09-30 12:54 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-09-30 12:54:17 PDT
Geoffrey Garen
Comment 2 2013-09-30 13:17:25 PDT
Comment on attachment 213030 [details] Patch r=me
WebKit Commit Bot
Comment 3 2013-09-30 14:39:48 PDT
Comment on attachment 213030 [details] Patch Clearing flags on attachment: 213030 Committed r156679: <http://trac.webkit.org/changeset/156679>
WebKit Commit Bot
Comment 4 2013-09-30 14:39:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.