Pass VM instead of JSGlobalObject to MathObject constructor. <https://webkit.org/b/122119>

Reviewed by Geoffrey Garen.

The MathObject constructor was only using the global object to get
to the VM. finishCreation() still uses it to set up functions.


Canonical link: https://commits.webkit.org/140176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156679 268f45cc-cd09-0410-ab3c-d52691b4dbfc